# MovieMeta

./: .gitignore  CLAUDE.md  README.md
rust/: .dockerignore  BATCH-FAILURE-ANALYSIS.md  CLOUDFLARE-BYPASS-GUIDE.md  COMPLETE-SUMMARY.md  COOKIE-CONFIGURATION.md  COOKIE-IMPLEMENTATION-SUMMARY.md  COOKIE-INIT-GUIDE.md  COOKIE-SETUP-README.md  COOKIE-TESTER-README.md  Cargo.toml  DOCUMENTATION-INDEX.md  Dockerfile  JAVINIZER-INTEGRATION-PLAN.md  LIVE-SCRAPER-TEST-RESULTS.md  QUICK-COOKIE-FIX.md  QUICKSTART.md  README.md  SCRAPER-REVIEW-2025-12-31.md  STATUS.md  TIER1-TEST-RESULTS.md  TROUBLESHOOTING.md  USER-GUIDE.md  WEEK13-JAV-SCRAPERS-SUMMARY.md  WINDOWS-GUIDE.md  build-windows.bat  build-windows.ps1  config.ini.example  docker-compose.yml  extract_cookies.py  init_config.py  run-example.bat  test_cookies.py
rust/mdc-api/: Cargo.toml
rust/mdc-api/src/: error.rs  handlers.rs  lib.rs  models.rs  routes.rs  websocket.rs
rust/mdc-api/tests/: simple_test.rs
rust/mdc-cli/: Cargo.toml
rust/mdc-cli/src/: main.rs
rust/mdc-cli/tests/: integration_test.rs
rust/mdc-core/: Cargo.toml
rust/mdc-core/benches/: number_parser_bench.rs  scanner_bench.rs
rust/mdc-core/src/: batch.rs  file_metadata.rs  file_ops.rs  lib.rs  logging.rs  nfo.rs  number_parser.rs  processor.rs  scanner.rs  types.rs  workflow.rs
rust/mdc-core/tests/: number_parser_tests.rs  scanner_tests.rs
rust/mdc-image/: Cargo.toml  face_detect_bridge.py
rust/mdc-image/benches/: image_bench.rs
rust/mdc-image/src/: face_detect.rs  lib.rs  processor.rs
rust/mdc-image/tests/: image_tests.rs
rust/mdc-scraper/: Cargo.toml  cloudflare_bridge.py
rust/mdc-scraper/src/: client.rs  cloudscraper.rs  http.rs  lib.rs  metadata.rs  registry.rs  scraper.rs
rust/mdc-scraper/src/scrapers/: avmoo.rs  dmm.rs  fc2.rs  imdb.rs  jav321.rs  javbus.rs  javdb.rs  javlibrary.rs  mgstage.rs  mod.rs  r18dev.rs  tmdb.rs  tokyohot.rs
rust/mdc-scraper/tests/: dmm_integration_test.rs  http_tests.rs
rust/mdc-storage/: Cargo.toml
rust/mdc-storage/migrations/: 001_initial_schema.sql
rust/mdc-storage/src/: config.rs  lib.rs  models.rs  repository.rs
rust/mdc-web/: README.md  package.json  vite.config.ts
rust/mdc-web/src/: app.css
rust/mdc-web/src/routes/: +layout.svelte  +page.svelte
rust/mdc-web/src/routes/config/: +page.svelte
rust/mdc-web/src/routes/jobs/: +page.svelte
rust/mdc-web/src/routes/scan/: +page.svelte
