[package]
name = "mdc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mdc-core = { path = "../mdc-core" }
mdc-storage = { path = "../mdc-storage" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
