[package]
name = "mdc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mdc-core = { path = "../mdc-core" }
mdc-storage = { path = "../mdc-storage" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
mdc-scraper = { version = "0.1.0", path = "../mdc-scraper" }
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"
