[package]
name = "mdc-image"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
image = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "image_bench"
harness = false
